--- a/Swift Fixer.xcodeproj/xcshareddata/xcschemes/Swift Fixer - Extension.xcscheme
+++ b/Swift Fixer.xcodeproj/xcshareddata/xcschemes/Swift Fixer - Extension.xcscheme
@@ -11,7 +11,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "&quot;$WORKSPACE_PATH/../../reset.sh&quot;&#10;">
+               scriptText = "&quot;$WORKSPACE_PATH/../../Scripts/reset.sh&quot;&#10;">
             </ActionContent>
          </ExecutionAction>
       </PreActions>
