--- a/Swift Fixer.xcodeproj/xcshareddata/xcschemes/Swift Fixer.xcscheme
+++ b/Swift Fixer.xcodeproj/xcshareddata/xcschemes/Swift Fixer.xcscheme
@@ -1,101 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1400"
-   version = "1.3">
-   <BuildAction
-      parallelizeBuildables = "YES"
-      buildImplicitDependencies = "YES">
-      <PreActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "&quot;$WORKSPACE_PATH/../../Scripts/reset.sh&quot;&#10;">
-            </ActionContent>
-         </ExecutionAction>
-      </PreActions>
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "196BF442297F39DB00D04A4B"
-               BuildableName = "Swift Fixer.app"
-               BlueprintName = "Swift Fixer"
-               ReferencedContainer = "container:Swift Fixer.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "193E70E8297F3AA40053A733"
-               BuildableName = "Swift Fixer .appex"
-               BlueprintName = "Swift Fixer - Extension"
-               ReferencedContainer = "container:Swift Fixer.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
-   </BuildAction>
-   <TestAction
-      buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
-      <Testables>
-      </Testables>
-   </TestAction>
-   <LaunchAction
-      buildConfiguration = "Debug"
-      selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
-      selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      launchStyle = "0"
-      useCustomWorkingDirectory = "NO"
-      ignoresPersistentStateOnLaunch = "NO"
-      debugDocumentVersioning = "YES"
-      debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "196BF442297F39DB00D04A4B"
-            BuildableName = "Swift Fixer.app"
-            BlueprintName = "Swift Fixer"
-            ReferencedContainer = "container:Swift Fixer.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
-   </LaunchAction>
-   <ProfileAction
-      buildConfiguration = "Release"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      savedToolIdentifier = ""
-      useCustomWorkingDirectory = "NO"
-      debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "196BF442297F39DB00D04A4B"
-            BuildableName = "Swift Fixer.app"
-            BlueprintName = "Swift Fixer"
-            ReferencedContainer = "container:Swift Fixer.xcodeproj">
-         </BuildableReference>
-      </BuildableProductRunnable>
-   </ProfileAction>
-   <AnalyzeAction
-      buildConfiguration = "Debug">
-   </AnalyzeAction>
-   <ArchiveAction
-      buildConfiguration = "Release"
-      revealArchiveInOrganizer = "YES">
-   </ArchiveAction>
+	LastUpgradeVersion="1400"
+	version="1.3">
+	<BuildAction
+		parallelizeBuildables="YES"
+		buildImplicitDependencies="YES">
+		<PreActions>
+			<ExecutionAction
+				ActionType="Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+				<ActionContent
+					title="Run Script"
+					scriptText="&quot;$WORKSPACE_PATH/../../Scripts/reset.sh&quot;&#10;">
+				</ActionContent>
+			</ExecutionAction>
+		</PreActions>
+		<BuildActionEntries>
+			<BuildActionEntry
+				buildForTesting="YES"
+				buildForRunning="YES"
+				buildForProfiling="YES"
+				buildForArchiving="YES"
+				buildForAnalyzing="YES">
+				<BuildableReference
+					BuildableIdentifier="primary"
+					BlueprintIdentifier="196BF442297F39DB00D04A4B"
+					BuildableName="Swift Fixer.app"
+					BlueprintName="Swift Fixer"
+					ReferencedContainer="container:Swift Fixer.xcodeproj">
+				</BuildableReference>
+			</BuildActionEntry>
+			<BuildActionEntry
+				buildForTesting="YES"
+				buildForRunning="YES"
+				buildForProfiling="YES"
+				buildForArchiving="YES"
+				buildForAnalyzing="YES">
+				<BuildableReference
+					BuildableIdentifier="primary"
+					BlueprintIdentifier="193E70E8297F3AA40053A733"
+					BuildableName="Swift Fixer .appex"
+					BlueprintName="Swift Fixer Extension"
+					ReferencedContainer="container:Swift Fixer.xcodeproj">
+				</BuildableReference>
+			</BuildActionEntry>
+		</BuildActionEntries>
+	</BuildAction>
+	<TestAction
+		buildConfiguration="Debug"
+		selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB"
+		selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB"
+		shouldUseLaunchSchemeArgsEnv="YES">
+		<Testables>
+		</Testables>
+	</TestAction>
+	<LaunchAction
+		buildConfiguration="Debug"
+		selectedDebuggerIdentifier="Xcode.DebuggerFoundation.Debugger.LLDB"
+		selectedLauncherIdentifier="Xcode.DebuggerFoundation.Launcher.LLDB"
+		launchStyle="0"
+		useCustomWorkingDirectory="NO"
+		ignoresPersistentStateOnLaunch="NO"
+		debugDocumentVersioning="YES"
+		debugServiceExtension="internal"
+		allowLocationSimulation="YES">
+		<BuildableProductRunnable
+			runnableDebuggingMode="0">
+			<BuildableReference
+				BuildableIdentifier="primary"
+				BlueprintIdentifier="196BF442297F39DB00D04A4B"
+				BuildableName="Swift Fixer.app"
+				BlueprintName="Swift Fixer"
+				ReferencedContainer="container:Swift Fixer.xcodeproj">
+			</BuildableReference>
+		</BuildableProductRunnable>
+	</LaunchAction>
+	<ProfileAction
+		buildConfiguration="Release"
+		shouldUseLaunchSchemeArgsEnv="YES"
+		savedToolIdentifier=""
+		useCustomWorkingDirectory="NO"
+		debugDocumentVersioning="YES">
+		<BuildableProductRunnable
+			runnableDebuggingMode="0">
+			<BuildableReference
+				BuildableIdentifier="primary"
+				BlueprintIdentifier="196BF442297F39DB00D04A4B"
+				BuildableName="Swift Fixer.app"
+				BlueprintName="Swift Fixer"
+				ReferencedContainer="container:Swift Fixer.xcodeproj">
+			</BuildableReference>
+		</BuildableProductRunnable>
+	</ProfileAction>
+	<AnalyzeAction
+		buildConfiguration="Debug">
+	</AnalyzeAction>
+	<ArchiveAction
+		buildConfiguration="Release"
+		revealArchiveInOrganizer="YES">
+	</ArchiveAction>
 </Scheme>
