--- a/Swift Fixer Extension/Swift_Fixer_Extension.entitlements
+++ b/Swift Fixer Extension/Swift_Fixer_Extension.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>$(TeamIdentifierPrefix)swift-fixer</string>
+		<string>$(TeamIdentifierPrefix)group.com.cadnza.swift-fixer</string>
 	</array>
 </dict>
 </plist>
