--- a/Swift Fixer/Swift_Fixer.entitlements
+++ b/Swift Fixer/Swift_Fixer.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>$(TeamIdentifierPrefix)group.com.cadnza.swift-fixer</string>
+		<string>$(TeamIdentifierPrefix)com.cadnza.swift-fixer</string>
 	</array>
 </dict>
 </plist>
